# sqlite-workbench-rs

./: .gitignore  Cargo.toml  LICENSE  LICENSE.fr  LICENSE.pt-PT  README.fr.md  README.md  README.pt-PT.md  build.rs  release.yml  settings.json
scripts/: Master.ps1  README.md  backup.ps1  build_debug.ps1  build_release.ps1  restore.ps1
src/: app.rs  db.rs  dialogs.rs  localization.rs  main.rs
src/app/: actions.rs  app_impl.rs  async_ops.rs  dialogs_ui.rs  mod.rs  sidebar.rs  tab_data.rs  tab_sql.rs  tab_stats.rs  tabs.rs  types.rs  update.rs
