[package]
name = "sqlite-workbench-rs"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "sqlite-workbench-rs"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", features = ["default"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["default"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
rfd = "0.15"
syntect = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
